--- a/src/mainwindow/index.html
+++ b/src/mainwindow/index.html
@@ -11,6 +11,9 @@
     <!-- semantic ui -->
     <link rel="stylesheet" type="text/css" href="../../../semantic/dist/semantic.min.css">
     <script src="../../../semantic/dist/semantic.min.js"></script>
+    <!-- semantic ui calendar -->
+    <link rel="stylesheet" type="text/css" href="../../../bower_components/semantic-ui-calendar/dist/calendar.min.css">
+    <script src="../../../bower_components/semantic-ui-calendar/dist/calendar.min.js"></script>
     <!-- custom css -->
     <link rel="stylesheet" type="text/css" href="./sass/layout.css">
   </head>
