make the list of products sortable using jquery-ui

--- a/src/mainwindow/index.html
+++ b/src/mainwindow/index.html
@@ -8,6 +8,8 @@
       /*global window*/
       window.$ = window.jQuery = require('jquery')
     </script>
+    <!-- jquery ui -->
+    <script src="../../../node_modules/jquery-ui-dist/jquery-ui.min.js"></script>
     <!-- semantic ui -->
     <link rel="stylesheet" type="text/css" href="../../../semantic/dist/semantic.min.css">
     <script src="../../../semantic/dist/semantic.min.js"></script>
