add code for the addwindow

--- a/src/addWindow/index.html
+++ b/src/addWindow/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Workshop: Stock</title>
+    <title>MyWorkshop:Stock-Addition</title>
     <!-- jquery -->
     <script type="application/javascript">
       /*global window*/
@@ -13,6 +13,9 @@
     <!-- semantic ui -->
     <link rel="stylesheet" type="text/css" href="../../public/semantic/dist/semantic.min.css">
     <script src="../../public/semantic/dist/semantic.min.js"></script>
+    <!-- semantic ui calendar -->
+    <link rel="stylesheet" type="text/css" href="../../node_modules/semantic-ui-calendar/dist/calendar.min.css">
+    <script src="../../node_modules/semantic-ui-calendar/dist/calendar.min.js"></script>
     <!-- custom css -->
     <link rel="stylesheet" type="text/css" href="./css/layout.css">
   </head>
